fix(): Update dependencies and align all css vars with Ionic

--- a/src/components/epay/epay.css
+++ b/src/components/epay/epay.css
@@ -216,7 +216,7 @@ floodteam-epay floodteam-error .ft-error-wrapper {
 }
 
 floodteam-epay ion-item h4 {
-  color: var(--theme-dark-grey) !important;
+  color: var(--ion-color-medium-shade) !important;
 }
 
 @media only screen and (max-width: 500px) {
