--- a/src/components/pay-card/pay-card.css
+++ b/src/components/pay-card/pay-card.css
@@ -1,7 +1,7 @@
 floodteam-pay-card {
   display: block;
   width: 100%;
-  font-family: var(--theme-font-primary, Arial, Helvetica, sans-serif);
+  font-family: var(--ion-font-family, Arial, Helvetica, sans-serif);
 }
 
 floodteam-pay-card .pay-card-wrapper {
