--- a/src/components/snapshot-card/snapshot-card.css
+++ b/src/components/snapshot-card/snapshot-card.css
@@ -2,12 +2,12 @@ floodteam-snapshot-card {
   height: 400px;
   font-family: var(
     --floodteam-snapshot-card-font-family,
-    var(--theme-font-primary, Arial, Helvetica, sans-serif)
+    var(--ion-font-family, Arial, Helvetica, sans-serif)
   );
   display: block;
 }
 floodteam-snapshot-card floodteam-badge {
-  --floodteam-badge-background: var(--theme-success, green);
+  --floodteam-badge-background: var(--ion-color-success, green);
   --floodteam-badge-color: #ffffff;
   position: absolute;
   top: 5px;
